tests/errors/stack_pop_empty_panics.ptt
// Runtime-panic test: Stack.pop on an empty stack must abort
// cleanly (the underlying List.pop assert path).

use std/stack

spark {
  s is Stack of int
  yell(s.pop())
}
